# KFChessNew

KungFuChess/: .gitignore  CMakeLists.txt  ToDo
KungFuChess/src/: main.cpp
KungFuChess/src/client/: client_main.cpp  game_application.cpp  game_application.hpp  windows_login_dialog.hpp
KungFuChess/src/client/input/: board_mapper.hpp  controller.cpp  controller.hpp
KungFuChess/src/client/network/: network_client.cpp  network_client.hpp
KungFuChess/src/client/view/: animation_data.cpp  animation_data.hpp  asset_locator.cpp  asset_locator.hpp  asset_manager.cpp  asset_manager.hpp  board_layout.cpp  board_layout.hpp  board_renderer.hpp  img.cpp  img.hpp  move_history_manager.cpp  move_history_manager.hpp  piece_view.hpp  renderer.cpp  renderer.hpp  score_manager.cpp  score_manager.hpp  theme.hpp  ui_renderer.hpp
KungFuChess/src/client/windows/: dialog_results.hpp  home_dialog.hpp  login_dialog.hpp  room_dialog.hpp
KungFuChess/src/engine/: game_engine.cpp  game_engine.hpp
KungFuChess/src/input/: board_mapper.hpp  controller.cpp  controller.hpp
KungFuChess/src/io/: board_parser.cpp  board_parser.hpp  board_printer.cpp
KungFuChess/src/model/: board.cpp  game_observer.hpp  game_state.hpp  position.cpp  position.hpp
KungFuChess/src/realtime/: motion.hpp  real_time_arbiter.cpp  real_time_arbiter.hpp
KungFuChess/src/rules/: balance_config.hpp  piece_rules.cpp  rule_engine.cpp  rule_engine.hpp
KungFuChess/src/server/: server_main.cpp
KungFuChess/src/server/bot/: bot_config.hpp  kung_fu_bot.cpp  kung_fu_bot.hpp
KungFuChess/src/server/db/: database_connection.cpp  database_connection.hpp
KungFuChess/src/server/db/entities/: user.hpp
KungFuChess/src/server/db/repositories/: user_repository.cpp  user_repository.hpp
KungFuChess/src/server/engine/: game_engine.cpp  game_engine.hpp
KungFuChess/src/server/game/: game_session.cpp  game_session.hpp  room.cpp  room.hpp  room_manager.cpp  room_manager.hpp  server_controller.cpp  server_controller.hpp
KungFuChess/src/server/network/: client_session.hpp  matchmaker.cpp  matchmaker.hpp  network_server.cpp  network_server.hpp
KungFuChess/src/server/network/handelers/: auth_handler.cpp  auth_handler.hpp  game_action_handler.cpp  game_action_handler.hpp  lobby_handler.cpp  lobby_handler.hpp
KungFuChess/src/server/realtime/: real_time_arbiter.hpp
KungFuChess/src/server/rules/: piece_rules.hpp  rule_engine.cpp
KungFuChess/src/server/texttests/: script_parser.cpp  script_parser.hpp  script_runner.cpp  script_runner.hpp
KungFuChess/src/shared/io/: board_parser.cpp  board_printer.hpp
KungFuChess/src/shared/model/: board.hpp  event_bus.hpp  events.hpp  game_observer.hpp  game_snapshot.hpp  motion.hpp  piece.hpp
KungFuChess/src/view/: animation_data.cpp  animation_player.cpp  animation_player.hpp  asset_locator.cpp  asset_manager.hpp  img.cpp  move_history_manager.cpp  move_history_manager.hpp  piece_view.cpp  piece_view.hpp  renderer.cpp  renderer.hpp  score_manager.cpp  score_manager.hpp
KungFuChess/tests/integration/: test_text_scripts.cpp
KungFuChess/tests/integration/scripts/: 05_capture.kfc
KungFuChess/tests/unit/: test_board.cpp  test_board_mapper.cpp  test_board_parser.cpp  test_board_printer.cpp  test_controller.cpp  test_game_engine.cpp  test_piece_rules.cpp  test_position.cpp  test_real_time_arbiter.cpp  test_rule_engine.cpp
